fixed invisible/unknown status

--- a/mini-themes/statusRounded.css
+++ b/mini-themes/statusRounded.css
@@ -28,6 +28,8 @@
   background-color: transparent !important;
   box-shadow: 0 0 20px 4px #dc3545;
 }
+.statusProfile-3ynqtt.invisible-1kp8Z0,
+.statusProfile-3ynqtt.unknown-Ms2zdV-3qoTek,
 .statusProfile-3ynqtt.offline-3qoTek {
   left: -1px;
   top: -1px;
